[tool.poetry]
name = "nts"
version = "0.0.1"
description = "Nouds Targert Solution"
authors = ["Arnoud Stolk (Noud)"]
readme = "README.md"
packages = [
    { include = "nts/api", from = "src/nts-api" },
    { include = "nts/bin", from = "src/nts-bin" },
    { include = "nts/core", from = "src/nts-core" },
    { include = "nts/message_processor", from = "src/nts-message-processor" },
]

[tool.poetry.dependencies]
python = "^3.11"
configargparse = "^1.7"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.12"
pylint = "^3.0.3"
importlib = "^1.0.4"
black = "^24.1.1"

[tool.poetry.scripts]
nts_launcher = "nts.bin.nts_launcher:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
